--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 The following logs changes for the CPAN distribution DBIx-Class-ResultSet-SetControl
 
+0.002   28 March 2019
+       - map method
+       - updated dist.ini
+
 0.001   08 March 2017
        - First Post!
